# PoppingDikr

./: .gitignore  .gitmodules  CMakeLists.txt  Dikr.cpp  LICENSE  README.md  Settings.cpp  build.zig  build.zig.zon  imgui.ini  imgui_SDL_includes.h  makefile  meson.build
.github/workflows/: release.yml
files/: PoppingDikr-Settings.xcf  PoppingDikr-Settings.xpm  Settings  Settings_Order  about.md  fonts_list
src/: dikr.c  settings.c
